<resources>
    <string name="app_name">Cinehub</string>

    <string name="homeFragment">Home</string>
    <string name="downloadFragment">Downloads</string>
    <string name="saveFragment">Saved</string>
    <string name="accountFragment">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="company_logo">Company Logo</string>

    <string name="search_here">Movies, Genres,…</string>

    <string name="see_all">See All</string>

    <string name="back">Back</string>

    <string name="cancel">Cancel</string>

    <string name="search">Search</string>


    <!-- ************************ Row Heading ************************ -->

    <string name="trending_heading">Trending Now</string>
    <string name="recently_heading">Recently Saved</string>
    <string name="continue_heading">Continue Watching …</string>
    <string name="english_heading">Popular English Movies</string>
    <string name="hindi_heading">Popular Hindi Movies</string>


    <!-- ************************ Temporary Text ************************ -->

    <string name="movies_poster">Hotel Transylvania 3: Summer Vacation</string>
    <string name="movies_title">Hotel Transylvania 3: Summer Vacation</string>
    <string name="movies_subtitle">Animation, Comedy, Family</string>
    <string name="movies_description">The unbreakable bond between human and animal is brought
        to life in this touching documentary about two abandoned elephants and their caretakers.</string>

    <!-- ************************ Movie Activity ************************ -->
    <string name="watch_movie">Watch Movie</string>
    <string name="download">Download</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="share">Share</string>
    <string name="like">Like</string>
    <string name="liked">Liked</string>
    <string name="dolby">Dolby</string>


    <!-- ************************ Player Activity ************************ -->
    <string name="unmute">UnMute</string>
    <string name="mute">Mute</string>
    <string name="speed1_5">Speed(1.5x)</string>
    <string name="speed0_5">Speed(0.5x)</string>
    <string name="speed1">Speed(1x)</string>
    <!--Player Res. custom_controller layout -->
    <string name="hundred">100</string>
    <string name="captions">Captions</string>
    <string name="slash">/</string>

    <!-- ************************ Splash Activity ************************* -->
    <string name="from">from Parth7D2</string>

    <!-- ************************ Date and Rate ************************* -->
    <string name="date">Date</string>
    <string name="rate">Rate</string>





</resources>