<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="154dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="140dp"
        android:layout_height="172.47dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="8dp"
        app:cardElevation="9dp"
        app:cardCornerRadius="19dp">

        <ImageView
            android:id="@+id/imgRecently_poster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/company_logo"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtRecently_title"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfpro_display_semibold"
        android:text="@string/movies_title"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:id="@+id/txtRecently_subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sfpro_display_medium"
        android:text="@string/movies_subtitle"
        android:textColor="@color/gray"
        android:textSize="10sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="-9dp"/>


</LinearLayout>