<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/crdTrending_row"
        android:layout_width="364dp"
        android:layout_height="194.65dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="15dp"
        app:cardCornerRadius="19dp"
        app:cardElevation="9dp">

        <ImageView
            android:id="@+id/imgTrending_poster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/movies_poster"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/txtTrending_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="42dp"
            android:fontFamily="@font/sfpro_display_semibold"
            android:text="@string/movies_title"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtTrending_subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/sfpro_display_medium"
            android:text="@string/movies_subtitle"
            android:textColor="@color/white"
            android:textSize="11sp" />


    </androidx.cardview.widget.CardView>

</LinearLayout>