<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SeeAllContinueFragment"
    android:background="@color/blue">

    <LinearLayout
        android:id="@+id/llback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:layout_marginStart="13dp"
        android:background="@drawable/back_bg">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/company_logo"
            android:src="@drawable/chevron_backward__4_"
            android:layout_marginStart="7dp"/>

        <TextView
            android:id="@+id/txtBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfpro_display_regular"
            android:text="@string/back"
            android:textColor="@color/blue"
            android:textSize="15sp"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"

            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_heading"
        android:textSize="36sp"
        android:fontFamily="@font/sfpro_display_bold"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"
        android:layout_gravity="center"/>

</FrameLayout>