<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

            <!-- TODO: Update blank fragment layout -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">


                <LinearLayout
                    android:id="@+id/homeActionBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtHome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sfpro_display_bold"
                        android:text="@string/app_name"
                        android:textColor="@color/black"
                        android:textSize="26sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:contentDescription="@string/company_logo"
                            android:src="@drawable/person_photo" />
                    </RelativeLayout>


                </LinearLayout>

                <TextView
                    android:id="@+id/txtTranding_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/homeActionBar"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="27dp"
                    android:fontFamily="@font/sfpro_display_bold"
                    android:text="@string/trending_heading"
                    android:textColor="@color/black"
                    android:textSize="18sp" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/trending_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtTranding_heading"
                    android:layout_marginStart="7dp" />

                <TextView
                    android:id="@+id/txtRecently_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/trending_recyclerView"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="18dp"
                    android:fontFamily="@font/sfpro_display_bold"
                    android:text="@string/recently_heading"
                    android:textColor="@color/black"
                    android:textSize="18sp" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recently_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtRecently_heading"
                    android:layout_marginStart="7dp" />

                <TextView
                    android:id="@+id/txtContinue_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/recently_recyclerView"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="18dp"
                    android:fontFamily="@font/sfpro_display_bold"
                    android:text="@string/continue_heading"
                    android:textColor="@color/black"
                    android:textSize="18sp" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/continue_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtContinue_heading"
                    android:layout_marginStart="7dp" />

                <TextView
                    android:id="@+id/txtEnglish_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/continue_recyclerView"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="18dp"
                    android:fontFamily="@font/sfpro_display_bold"
                    android:text="@string/english_heading"
                    android:textColor="@color/black"
                    android:textSize="18sp" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/english_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtEnglish_heading"
                    android:layout_marginStart="7dp" />

                <TextView
                    android:id="@+id/txtHindi_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/english_recyclerView"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="18dp"
                    android:fontFamily="@font/sfpro_display_bold"
                    android:text="@string/hindi_heading"
                    android:textColor="@color/black"
                    android:textSize="18sp" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/hindi_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtHindi_heading"
                    android:layout_marginStart="7dp" />

            </RelativeLayout>
    </ScrollView>

</FrameLayout>