<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_custom_controller"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99000000"
    android:gravity="center_vertical">

    <LinearLayout
        android:id="@+id/llbackplayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="36dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgBackplayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:contentDescription="@string/company_logo"
            android:src="@drawable/chevron_backward__5_" />

        <TextView
            android:id="@+id/txtBackplayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:text="@string/back"
            android:textAppearance="@style/sfpro_display_regular_fonts"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/exo_lock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/lock_open__2_"
        android:theme="@style/ClickableView" />

    <LinearLayout
        android:id="@+id/sec_controlvid1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_vertical|center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/exo_rew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="36dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/gobackward_10__3_"
            android:theme="@style/ClickableView" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/exo_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/pause_fill__4_"
                android:theme="@style/ClickableView" />

            <ImageView
                android:id="@+id/exo_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/play_fill_player"
                android:theme="@style/ClickableView" />
        </RelativeLayout>


        <ImageView
            android:id="@+id/exo_ffwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="45dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/goforward_10"
            android:theme="@style/ClickableView" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/sec_controlvid2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical|center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/exo_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="-7dp"
                android:fontFamily="@font/sfpro_display_regular"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="-7dp"
                android:text="@string/slash"
                android:textColor="#FFFFFF"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/exo_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-7dp"
                android:fontFamily="@font/sfpro_display_regular"
                android:textColor="@color/white"
                android:textSize="12sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/bt_fullscreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/arrow_up_left_and_arrow_down_right_circle"
                android:theme="@style/ClickableView" />
        </LinearLayout>

        <com.google.android.exoplayer2.ui.DefaultTimeBar
            android:id="@+id/exo_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/app_name"
            app:bar_height="2dp"
            app:buffered_color="#7C7C7C"
            app:played_color="@color/blue"
            app:scrubber_color="@color/white"
            app:scrubber_dragged_size="22dp"
            app:scrubber_enabled_size="18dp"
            app:unplayed_color="#997C7C7C" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="11dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/sfpro_display_regular"
                android:text=""
                android:textColor="@color/white"
                android:textSize="13sp" />

            <LinearLayout
                android:id="@+id/ll_Unmute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/img_Speaker_UnMute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="7dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/speaker_wave_2_fill" />

                <TextView
                    android:id="@+id/txt_Mute_UnMute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sfpro_display_regular"
                    android:text="@string/unmute"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/bt_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="7dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/captions_bubble" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sfpro_display_regular"
                    android:text="@string/captions"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/bt_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="7dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/speedometer" />

                <TextView
                    android:id="@+id/txt_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sfpro_display_regular"
                    android:text="@string/speed1"
                    android:textColor="@color/white"
                    android:textSize="13sp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_sliderElement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="27dp">


        <ImageView
            android:id="@+id/img_briteness"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/sun_max__1_" />

        <TextView
            android:id="@+id/brt_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="189dp"
            android:fontFamily="@font/sfpro_display_regular"
            android:paddingBottom="25dp"
            android:text="@string/hundred"
            android:textColor="@color/white"
            android:textSize="10sp" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_Slider"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_centerVertical="true">

        <com.google.android.material.slider.Slider
            android:id="@+id/brt_seekbar"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:layout_marginStart="-40dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/app_name"
            android:indeterminate="false"
            android:max="100"
            android:progress="1"
            android:rotation="270"
            app:haloColor="#00FFFFFF"
            app:labelBehavior="gone"
            app:thumbColor="@color/white"
            app:thumbRadius="0dp"
            app:thumbStrokeColor="#00FFFFFF"
            app:tickColor="@color/white"
            app:trackColorActive="@color/white"
            app:trackColorInactive="#997C7C7C"
            app:trackHeight="7dp" />

    </RelativeLayout>

</RelativeLayout>